add missing routes to swagger doc
