# server/routes/auth.routes.js
@@ -111,10 +111,7 @@ router.post('/login', (req, res, next) => {
       .catch(err => res.status(500).json({ message: err.message }));
   });
 
-  router.get('/verify', isAuthenticated, (req, res, next) => {       // <== CREATE NEW ROUTE
- 
-    // If JWT token is valid the payload gets decoded by the
-    // isAuthenticated middleware and made available on `req.payload`
+  router.get('/verify', isAuthenticated, (req, res, next) => {
     // Send back the object with user data
     // previously set as the token payload
     res.status(200).json(req.payload);
